--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
         "ng2-charts": "^1.6.0",
         "rxjs": "^5.5.8",
         "yarn": "^1.5.1",
-        "zone.js": "^0.8.20"
+        "zone.js": "^0.8.20",
+        "@angular/cli": "^1.7.3",
+        "@angular/compiler-cli": "^5.2.9",
     },
     "devDependencies": {
         "@angular/cli": "^1.7.3",
