--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "gitbuild": "ng build --prod --base /start-angular/SB-Admin-BS4-Angular-5/master/dist/",
         "test": "ng test",
         "lint": "ng lint",
-        "e2e": "ng e2e"
+        "e2e": "ng e2e",
+        "heroku-postbuild": "webpack -p --config ./webpack.prod.config.js --progress"
     },
     "private": true,
     "dependencies": {
